# ep583draw

./: CMakeLists.txt  readme.md  writedata.sh
include/: GUI_Paint.h  font.h
src/: EPD_5in83b_V2.c  GUI_Paint.c  font.cpp  main.cpp
